[package]
name = "xorf-generator"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "xorf-generator"
path = "src/main.rs"
doc = false

[dependencies]
base64 = ">=0.21"
sha2 = "0"
bytes = "*"
clap = { version = "4", features = ["derive"] }
bincode = "1"
csv = "1"
twox-hash = "1"
xorf = { version = "0", features = ["serde"] }
prost = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
helium-crypto = { version = "0.8.0", features = ["multisig"] }
anyhow = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
flate2 = "1"

[build-dependencies]
prost-build = "0"
